                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) mod_proxy_http2: using HTTP/2 flow control for backend streams by 
     observing data actually send out on the frontend h2 connection. 
     [Stefan Eissing]
     
  *) mpm: Generalise the ap_mpm_register_socket functions to accept pipes
     or sockets. [Graham Leggett]

  *) mod_rewrite: Don't implicitly URL-escape the original query string
     when no substitution has changed it (like PR50447 but server context)
     [Evgeny Kotkov <evgeny.kotkov visualsvn.com>]

  *) core: New CGIVar directive can configure REQUEST_URI to represent the
     current URI being processed instead of always the original request.
     [Jeff Trawick]

  *) mod_include: Add variable DOCUMENT_ARGS, with the arguments to the
     request for the SSI document.  [Jeff Trawick]

  *) core: Extend support for setting aside data from the network input filter
     to any connection or request input filter. [Graham Leggett]

  *) mod_ssl: Add "no_crl_for_cert_ok" flag to SSLCARevocationCheck directive
     to opt-in previous behaviour (2.2) with CRLs verification when checking
     certificate(s) with no corresponding CRL.  [Yann Ylavic]

  *) mod_proxy_http2: rescheduling of requests that have not been processed
     by the backend when receiving a GOAWAY frame before done.
     [Stefan Eissing]
     
  *) core: Split ap_create_request() from ap_read_request(). [Graham Leggett]

  *) mod_ssl: Don't lose track of the SSL context if the ssl_run_pre_handshake()
     hook returns an error. [Graham Leggett]

  *) ab: Use caseless matching for HTTP tokens (e.g. content-length). PR 59111.
     [Yann Ylavic]

  *) mod_ssl: Fix a possible memory leak on restart for custom [EC]DH params.
     [Jan Kaluza, Yann Ylavic]

  *) mod_auth_digest: Fix compatibility with expression-based Authname. PR59039.
     [Eric Covener]
